@@ -1,3 +1,15 @@
+2013-01-11  Ryosuke Niwa  <rniwa@webkit.org>
+
+        REGRESSION: buildbot mangles error messages with timestamps run-webkit-tests outputs
+        https://bugs.webkit.org/show_bug.cgi?id=106688
+
+        Reviewed by Eric Seidel.
+
+        Update the regular expression used to strip the garbage at the beginning.
+
+        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
+        (RunWebKitTests.nrwt_log_message_regexp):
+
 2013-01-11  Pratik Solanki  <psolanki@apple.com>
 
         TestRunner leaks when running tests
